# block-indexer

./: pyproject.toml
bic_indexer/: block.py  w3.py
bicxer/: block.py  config.py  filters.py  models.py  w3.py
tests/: conftest.py
tests/data/: block_121681225.pickle
tests/integration/: test_w3.py
tests/unit/: test_block_pickling.py
